Agregado README.md y .gitignore para el backend
