# backend/routes/paymentRoutes.js
@@ -1,12 +1,22 @@
 const express = require('express');
 const { createPayment, confirmPayment } = require('../controllers/paymentController');
 const authMiddleware = require('../middlewares/authMiddleware');
+const { body } = require('express-validator');
+
 const router = express.Router();
 
-// Ruta para crear un pago
-router.post('/create', authMiddleware, createPayment);
+// Validaciones
+const validateCreatePayment = [
+  body('plan').isIn(['Pro', 'Elite']).withMessage('El plan debe ser Pro o Elite'),
+];
 
-// Ruta para confirmar un pago
-router.post('/confirm', authMiddleware, confirmPayment);
+const validateConfirmPayment = [
+  body('orderId').notEmpty().withMessage('El ID de la orden es obligatorio'),
+  body('userId').isMongoId().withMessage('El ID de usuario debe ser válido'),
+];
+
+// Rutas
+router.post('/create', authMiddleware, validateCreatePayment, createPayment);
+router.post('/confirm', authMiddleware, validateConfirmPayment, confirmPayment);
 
 module.exports = router;
